apps/tetris/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    app: tetris
