apps/tetris/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
  namespace: tetris
  labels:
    app: tetris
spec:
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
